--- a/src/App.css
+++ b/src/App.css
@@ -41,39 +41,39 @@ button {
   font-size: calc(10px + 2vmin);
 }
 
-
-
-
+.nav-item, .nav-link {
+  font-size: 18px;
+  color: #737b8b;
+}
  
 .wrapper {
   display: block;
 }
 
-
-
-/***** Sidebar *****/
-
-.sidebar {
-  width: 250px;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: -255px;
-  z-index: 999;
-  background: #333;
-  color: #fff;
-  transition: all .3s;
-  box-shadow: 3px 3px 3px rgba(51, 51, 51, 0.5);
-  text-align: left;
+.interactiveBtn {
+  background-color: #3a9ecd;
 }
 
-.sidebar.active {
-  left: 0;
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
-/***** Content *****/
+.dashboard-container{
+  flex-direction: row;
+  flex-wrap:wrap;
+  justify-content: space-evenly;
+  align-content: space-around;
+  align-items: baseline;
+}
 
-.content {
-  width: 100%;
-  transition: all 0.3s;
+.dashboardElement{
+  align-self: center;
+  color: blue;
+  padding: 10px;
+  border-radius: 1px;
+  border: 2px;
+  border-color: green;
 }
