--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  display: flex;
 }
 
 
@@ -68,4 +69,13 @@ code {
   /* top right corner of the sidebar */
   top: 10px;
   right: 10px;
+}
+
+.myFormGroup {
+  margin: 10px;
+}
+
+.centerButton {
+  text-align: center;
+  border: 3px solid green;
 }
