--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,9 @@ button {
 .dashboard-container{
   flex-direction: row;
   flex-wrap:wrap;
+  justify-content: space-evenly;
   align-content: space-around;
+  align-items: baseline;
 }
 
 .dashboardElement{
