--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@ button {
 }
 
 .dashboardElement{
+  margin: 10px;
   padding: 10px;
   height: 400px;
 }
@@ -81,4 +82,8 @@ button {
 .cards-title{
   font-size: 1.5em;
   font-weight: bold;
+}
+
+.navbar {
+  height: 10vh;
 }
