--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ button {
 .dashboardElement {
 
   padding: 7px;
-  height: 95%;
+  height: 100%;
 }
 
 .dashboardElementSm {
@@ -102,7 +102,12 @@ button {
 }
 
 #circuitMap {
-  height: 400px;
+  height: 100%;
   background-color: #282c34;
   
+}
+
+.parentMap{
+  height: 100%;
+  width: 100%;
 }
