--- a/root/frontend/src/App.css
+++ b/root/frontend/src/App.css
@@ -56,11 +56,13 @@ button {
   background-color: #3a9ecd;
 }
 
-.center {
+.sensorImage {
   display: block;
+  margin-top: 5%;
+  margin-bottom: -5%;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 30%;
 }
 
 .dashboardContainer {
@@ -104,10 +106,45 @@ button {
 #circuitMap {
   height: 100%;
   background-color: #282c34;
-  
+
 }
 
-.parentMap{
+.parentMap {
   height: 100%;
   width: 100%;
+}
+
+.led-box {
+  height: 20px;
+  width: 30px;
+  margin-left: 30px;
+  float: left;
+}
+
+.led-red {
+  margin: 0 auto;
+  width: 20px;
+  height: 20px;
+  background-color: rgb(153, 0, 0);
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #ffffff 0 2px 12px;
+}
+
+.led-green {
+  margin: 0 auto;
+  width: 20px;
+  height: 20px;
+  background-color: rgb(136, 255, 0);
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #41e400 0 2px 12px;
+}
+
+.led-component{
+  width: 30px;
+  height: 30px;
+  margin-left:20px;
+}
+
+.carImages {
+  pointer-events: none;
 }
