--- a/root/frontend/src/App.css
+++ b/root/frontend/src/App.css
@@ -100,11 +100,11 @@ button {
 }
 
 .react-grid-item.react-grid-placeholder {
-  background-color: lime;
+  background-color: rgb(0, 0, 0);
 }
 
 #circuitMap {
-  height: 500px;
+  height: 50vh;
   background-color: #282c34;
 
 }
