--- a/root/frontend/src/App.css
+++ b/root/frontend/src/App.css
@@ -181,3 +181,22 @@ button {
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing;
 }
+
+.rowChart {
+  content: "";
+  display: table;
+  clear: both;
+}
+.colChart {
+  width: 100%;
+}
+
+.bottomOfPage{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #ffffff;
+  padding: 10px;
+  box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.1);
+}
