--- a/root/frontend/src/App.css
+++ b/root/frontend/src/App.css
@@ -200,3 +200,11 @@ button {
   padding: 10px;
   box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.1);
 }
+
+#refreshButton {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  padding: 10px;
+  z-index: 400;
+}
